Configuración inicial del taller

--- a/src/main/resources/config/application-prod.yml
+++ b/src/main/resources/config/application-prod.yml
@@ -26,6 +26,9 @@ management:
         enabled: false
 
 spring:
+  docker:
+    compose:
+      enabled: false # Disabled - we manage Docker containers manually
   devtools:
     restart:
       enabled: false
