--- a/src/main/docker/postgresql.yml
+++ b/src/main/docker/postgresql.yml
@@ -3,11 +3,12 @@ name: taller1
 services:
   postgresql:
     image: postgres:17.4
-    # volumes:
-    #   - ~/volumes/jhipster/taller1/postgresql/:/var/lib/postgresql/data/
+    volumes:
+      - ~/volumes/jhipster/taller1/postgresql/:/var/lib/postgresql/data/
     environment:
       - POSTGRES_USER=taller1
-      - POSTGRES_HOST_AUTH_METHOD=trust
+      - POSTGRES_PASSWORD=123123
+      - POSTGRES_DB=taller1
     healthcheck:
       test: ['CMD-SHELL', 'pg_isready -U $${POSTGRES_USER}']
       interval: 5s
