--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -21,6 +21,9 @@ logging:
     com.mycompany.myapp: DEBUG
 
 spring:
+  docker:
+    compose:
+      enabled: false # Disabled - we manage Docker containers manually
   devtools:
     restart:
       enabled: true
@@ -34,7 +37,7 @@ spring:
     type: com.zaxxer.hikari.HikariDataSource
     url: jdbc:postgresql://localhost:5432/taller1
     username: taller1
-    password:
+    password: 123123
     hikari:
       poolName: Hikari
       auto-commit: false
